--- a/style.css
+++ b/style.css
@@ -880,7 +880,7 @@ form input[type="button"] {
 }
 
 .professors-marquee {
-  animation: marquee 50s linear infinite !important;
+  animation: marquee 30s linear infinite !important;
 }
 
 .partners-marquee {
